--- a/create_group.html
+++ b/create_group.html
@@ -1,49 +1,39 @@
-{% extends "base.html" %}
-{% block title %}Создание группы{% endblock %}
-
-{% block sidebar %}
-<li onclick="location.href='{{ url_for('index') }}'" style="cursor:pointer;">← Назад</li>
-<li><strong>Создать группу</strong></li>
-{% endblock %}
-
-{% block content %}
-<div style="padding:2rem; max-width:400px; margin:auto;">
-  <h1>Создать группу</h1>
-  {% if error %}
-  <p style="color:red;">{{ error }}</p>
-  {% endif %}
-  <form method="post">
-    <label style="display:block; margin:1rem 0;">
-      Название группы:
-      <input
-              type="text"
-              name="name"
-              required
-              autofocus
-              style="width:100%; padding:0.5rem; margin-top:0.5rem; border:1px solid #CCC; border-radius:6px;"
-      >
+<!-- templates/create_group.html -->
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Создание группы</title>
+  <style>
+    body { font-family: sans-serif; margin: 2em; }
+    form { max-width: 400px; }
+    label { display: block; margin: 0.5em 0; }
+    .error { color: red; }
+    button { margin-top: 1em; padding: 0.5em 1em; }
+  </style>
+</head>
+<body>
+<h1>Создать группу</h1>
+<a href="{{ url_for('index') }}">← Назад к списку чатов</a>
+{% if error %}
+<p class="error">{{ error }}</p>
+{% endif %}
+<form method="post" action="{{ url_for('create_group') }}">
+  <label>
+    Название группы:
+    <input name="name" required autofocus />
+  </label>
+  <fieldset>
+    <legend>Выберите участников:</legend>
+    {% for u in possible %}
+    <label>
+      <input type="checkbox" name="members" value="{{ u }}"
+             {% if u == username %}checked disabled{% endif %} />
+      {{ u }}
     </label>
-    <fieldset style="margin:1rem 0; padding:1rem; border:1px solid #DDD; border-radius:6px;">
-      <legend style="padding:0 0.5rem;">Участники:</legend>
-      {% for u in possible %}
-      <label style="display:flex; align-items:center; margin-bottom:0.5rem; cursor:pointer;">
-        <input
-                type="checkbox"
-                name="members"
-                value="{{ u }}"
-                {% if u == username %}checked disabled{% endif %}
-                style="margin-right:0.5rem;"
-        >
-        <img
-                src="https://ui-avatars.com/api/?name={{ u }}&background=D1C4E9&color=333&size=24"
-                class="avatar"
-                alt="avatar"
-        >
-        {{ u }}
-      </label>
-      {% endfor %}
-    </fieldset>
-    <button type="submit" style="width:100%;">Создать</button>
-  </form>
-</div>
-{% endblock %}
+    {% endfor %}
+  </fieldset>
+  <button type="submit">Создать</button>
+</form>
+</body>
+</html>
