--- a/group.html
+++ b/group.html
@@ -1,58 +1,70 @@
-{% extends "base.html" %}
-{% block title %}Группа: {{ group_name }}{% endblock %}
-
-{% block content %}
-<div class="chat-header" style="display:flex; flex-direction:column; gap:0.5rem; padding:1rem; border-bottom:1px solid #DDD;">
-    <div>
-        <a href="{{ url_for('index') }}" style="font-size:1.2rem; text-decoration:none; color:var(--text-primary);">← Назад</a>
-    </div>
-    <h1 style="margin:0;">Группа: {{ group_name }}</h1>
-    <p style="margin:0; color:var(--text-secondary);">Участники: {{ members|join(', ') }}</p>
+<!-- templates/group.html -->
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Группа: {{ group_name }}</title>
+    <style>
+        body { font-family: sans-serif; margin: 2em; }
+        #header { margin-bottom: 1em; }
+        #header a { margin-right: 1em; }
+        #chat { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 0.5em; }
+        #chat p { margin: 0.2em 0; }
+        form { margin-top: 1em; }
+    </style>
+</head>
+<body>
+<div id="header">
+    <span>Привет, {{ username }}!</span>
+    <a href="{{ url_for('index') }}">← Назад</a>
+    <a href="{{ url_for('logout') }}">Выйти</a>
 </div>
-
-<div id="chat" class="chat-window"></div>
-
-<form id="form" class="chat-form" style="display:flex; padding:1rem; border-top:1px solid #DDD;">
-    <input id="input" autocomplete="off" placeholder="Введите сообщение…" style="flex:1; padding:0.5rem; border:1px solid #CCC; border-radius:4px;">
-    <button style="margin-left:0.5rem; padding:0.5rem 1rem;">Отправить</button>
+<h1>Группа: {{ group_name }}</h1>
+<p>Участники: {{ members | join(', ') }}</p>
+<div id="chat"></div>
+<form id="form">
+    <input id="input" autocomplete="off" placeholder="Введите сообщение…" size="50" />
+    <button>Отправить</button>
 </form>
-{% endblock %}
 
-{% block scripts %}
 <script>
     const chatEl = document.getElementById('chat');
-    let autoScroll = true;
-
-    chatEl.addEventListener('scroll', () => {
-      autoScroll = (chatEl.scrollTop + chatEl.clientHeight >= chatEl.scrollHeight - 10);
-    });
+    const form = document.getElementById('form');
+    const input = document.getElementById('input');
+    const groupId = {{ group_id }};
 
     async function fetchGroupMessages() {
-      const doScroll = autoScroll;
-      const res = await fetch(`/group_messages/{{ group_id }}`);
-      const msgs = await res.json();
-      chatEl.innerHTML = msgs.map(m =>
-        `<div class="message ${m.username === "{{ username }}" ? 'own' : ''}">
-           <strong>${m.username}:</strong> ${m.msg}
-         </div>`
-      ).join('');
-      if (doScroll) chatEl.scrollTop = chatEl.scrollHeight;
+      try {
+        const res = await fetch(`/group_messages/${groupId}`);
+        const msgs = await res.json();
+        chatEl.innerHTML = msgs
+          .map(m => `<p><strong>${m.username}:</strong> ${m.msg}</p>`)
+          .join('');
+        chatEl.scrollTop = chatEl.scrollHeight;
+      } catch (e) {
+        console.error('Ошибка при загрузке сообщений', e);
+      }
     }
 
-    document.getElementById('form').addEventListener('submit', async e => {
+    form.addEventListener('submit', async e => {
       e.preventDefault();
-      const txt = document.getElementById('input').value.trim();
-      if (!txt) return;
-      await fetch(`/message/group/{{ group_id }}`, {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({msg: txt})
-      });
-      document.getElementById('input').value = '';
-      fetchGroupMessages();
+      const text = input.value.trim();
+      if (!text) return;
+      try {
+        await fetch(`/message/group/${groupId}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ msg: text })
+        });
+        input.value = '';
+        fetchGroupMessages();
+      } catch (e) {
+        console.error('Ошибка при отправке', e);
+      }
     });
 
     setInterval(fetchGroupMessages, 2000);
     fetchGroupMessages();
 </script>
-{% endblock %}
+</body>
+</html>
