--- a/login.html
+++ b/login.html
@@ -1,14 +1,52 @@
-{% extends "base.html" %}
-{% block title %}Вход{% endblock %}
-{% block content %}
-<div style="padding:2rem; max-width:400px; margin:auto;">
-    <h1>Вход</h1>
-    {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
-    <form method="post">
-        <input name="username" placeholder="Логин" required style="width:100%; padding:0.5rem; margin:0.5rem 0;" autofocus>
-        <input type="password" name="password" placeholder="Пароль" required style="width:100%; padding:0.5rem; margin:0.5rem 0;">
-        <button type="submit">Войти</button>
-    </form>
-    <p><a href="{{ url_for('register') }}">Нет аккаунта? Зарегистрироваться</a></p>
-</div>
-{% endblock %}
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Вход в чат</title>
+    <style>
+        body {
+          font-family: sans-serif;
+          margin: 2em;
+        }
+        form {
+          max-width: 300px;
+        }
+        input {
+          display: block;
+          margin: 0.5em 0;
+          width: 100%;
+          padding: 0.5em;
+          box-sizing: border-box;
+        }
+        button {
+          padding: 0.5em 1em;
+          cursor: pointer;
+        }
+        .error {
+          color: red;
+          margin-bottom: 1em;
+        }
+        a {
+          display: block;
+          margin-top: 1em;
+          color: #00f;
+          text-decoration: none;
+        }
+        a:hover {
+          text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+<h1>Вход</h1>
+{% if error %}
+<p class="error">{{ error }}</p>
+{% endif %}
+<form method="post" action="{{ url_for('login') }}">
+    <input name="username" placeholder="Логин" required autofocus>
+    <input type="password" name="password" placeholder="Пароль" required>
+    <button type="submit">Войти</button>
+</form>
+<a href="{{ url_for('register') }}">Нет аккаунта? Зарегистрироваться</a>
+</body>
+</html>
