--- a/register.html
+++ b/register.html
@@ -1,14 +1,27 @@
-{% extends "base.html" %}
-{% block title %}Регистрация{% endblock %}
-{% block content %}
-<div style="padding:2rem; max-width:400px; margin:auto;">
-    <h1>Регистрация</h1>
-    {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
-    <form method="post">
-        <input name="username" placeholder="Логин" required style="width:100%; padding:0.5rem; margin:0.5rem 0;" autofocus>
-        <input type="password" name="password" placeholder="Пароль" required style="width:100%; padding:0.5rem; margin:0.5rem 0;">
-        <button type="submit">Зарегистрироваться</button>
-    </form>
-    <p><a href="{{ url_for('login') }}">Уже есть аккаунт? Войти</a></p>
-</div>
-{% endblock %}
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Регистрация</title>
+    <style>
+        body { font-family: sans-serif; margin: 2em; }
+        form { max-width: 300px; }
+        input { display: block; margin: 0.5em 0; width: 100%; padding: 0.5em; }
+        button { padding: 0.5em 1em; }
+        .error { color: red; }
+        a { font-size: 0.9em; display: block; margin-top: 1em; }
+    </style>
+</head>
+<body>
+<h1>Регистрация</h1>
+{% if error %}
+<p class="error">{{ error }}</p>
+{% endif %}
+<form method="post">
+    <input name="username" placeholder="Логин" required autofocus>
+    <input type="password" name="password" placeholder="Пароль" required>
+    <button type="submit">Зарегистрироваться</button>
+</form>
+<a href="{{ url_for('login') }}">Уже есть аккаунт? Войти</a>
+</body>
+</html>
